--- a/templates/base.html
+++ b/templates/base.html
@@ -111,6 +111,7 @@
             min-height: 100vh;
             display: flex;
             flex-direction: column;
+            background: #f8fdf4;
         }
 
         main {
