--- a/templates/owner/room_detail_owner.html
+++ b/templates/owner/room_detail_owner.html
@@ -15,7 +15,7 @@
         height: 6px;
     }
     .thumbnail-gallery::-webkit-scrollbar-track {
-        background: #f1f1f1;
+        background: #f8fdf4;
         border-radius: 10px;
     }
     .thumbnail-gallery::-webkit-scrollbar-thumb {
